<resources>
    <string name="API_ERROR_ACCESS_DENIED">"You don't have permission to access that record."</string>
    <string name="API_ERROR_ACCOUNT_DEACTIVATED">Your account was deactivated.</string>
    <string name="API_ERROR_ADDRESS_BOOK_NOT_FOUND">The address book could not be found.</string>
    <string name="API_ERROR_AVATAR_INVALID">The avatar URL provided is invalid.</string>
    <string name="API_ERROR_BAD_CREDENTIALS">That username or password is incorrect.</string>
    <string name="API_ERROR_CANT_FLAG_SELF">"You can't report yourself."</string>
    <string name="API_ERROR_CANT_FOLLOW_SELF">"You can't follow yourself dawg"</string>
    <string name="API_ERROR_CAPTCHA_REQUIRED">Need to perform captcha.</string>
    <string name="API_ERROR_COMMENT_INVALID_LENGTH">Your comment must be 140 characters or less.</string>
    <string name="API_ERROR_DESCRIPTION_INVALID_LENGTH">Your caption must be 140 characters or less.</string>
    <string name="API_ERROR_DUPLICATE_MENTIONS">You cannot mention the same user twice.</string>
    <string name="API_ERROR_EMAIL_INVALID">That email address looks invalid. Please double check and try again.</string>
    <string name="API_ERROR_EMAIL_IN_USE">That email address is already in use.</string>
    <string name="API_ERROR_EXPIRED_SESSION">Your session has expired.</string>
    <string name="API_ERROR_FACEBOOK_FF_DISABLED">Vine is not authorized to make this Facebook request.</string>
    <string name="API_ERROR_FACEBOOK_NOT_AUTHORIZED">Not authorized to post to Facebook</string>
    <string name="API_ERROR_FSQUARE_VENUE_INVALID">That Foursquare venue is invalid.</string>
    <string name="API_ERROR_INVALID_ARGUMENT">Invalid argument.</string>
    <string name="API_ERROR_INVALID_ERROR_CODE">Invalid or unknown error code.</string>
    <string name="API_ERROR_INVALID_SESSION">That session key is invalid.</string>
    <string name="API_ERROR_LOCATION_INVALID_LENGTH">Your location must be 32 characters or less.</string>
    <string name="API_ERROR_MISSING_REQUIRED_FIELD">A required parameter is missing.</string>
    <string name="API_ERROR_NON_INTEGER_VALUE">Argument must be an integer.</string>
    <string name="API_ERROR_NOTIFICATION_REFERENCES_SELF">A notification cannot reference itself.</string>
    <string name="API_ERROR_NO_ARGUMENTS_PROVIDED">Arguments were expected but none were provided.</string>
    <string name="API_ERROR_ORPHANED_USER_ACCOUNT">"Without an email address or Twitter account, you won't be able to log in."</string>
    <string name="API_ERROR_PASSWORD_INVALID">Please use a password between 8 and 20 characters, with at least one number.</string>
    <string name="API_ERROR_PASSWORD_RESET_TOKEN_EXPIRED">Your password reset token has expired.</string>
    <string name="API_ERROR_PHONE_INVALID">That phone number looks invalid. Please double check and try again.</string>
    <string name="API_ERROR_RECORD_DOES_NOT_EXIST">That record does not exist.</string>
    <string name="API_ERROR_RELATIONSHIP_REQUIRES_ACTION">An action must be specified to modify the relationship.</string>
    <string name="API_ERROR_REQUIRES_ADMIN_LOGIN">You must be an admin to perform that action.</string>
    <string name="API_ERROR_REQUIRES_LOGIN">You must be logged in to perform this action.</string>
    <string name="API_ERROR_TOO_MANY_MENTIONS">Your caption cannot contain more than 10 user mentions.</string>
    <string name="API_ERROR_TWITTER_NAME_IN_USE">That Twitter account is already in use.</string>
    <string name="API_ERROR_TWITTER_NOT_AUTHORIZED">Not authorized to post to Twitter</string>
    <string name="API_ERROR_TWITTER_WRONG_ACCOUNT">Your Vine account is already linked to another Twitter account.</string>
    <string name="API_ERROR_UNKNOWN_ERROR">An unknown error occurred.</string>
    <string name="API_ERROR_UNSUPPORTED_METHOD">That method is unsupported.</string>
    <string name="API_ERROR_USERNAME_INVALID_CHARACTERS">Your username can only contain alphanumeric characters and an underscore.</string>
    <string name="API_ERROR_USERNAME_INVALID_LENGTH">Please use a username between 3 and 32 characters.</string>
    <string name="API_ERROR_USERNAME_IN_USE">That username is already in use.</string>
    <string name="API_ERROR_USER_DESCRIPTION_INVALID_LENGTH">Your profile description must be 160 characters or less.</string>
    <string name="API_ERROR_VIDEOURL_INVALID">The URL provided for the video is invalid.</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="accept_failed">Unable to accept</string>
    <string name="activity_comment">\"%1$s\" commented on your post: %2$s</string>
    <string name="activity_empty">"You don't have any activity yet."</string>
    <string name="activity_error">An error occurred while trying to update Activity. Please try again later.</string>
    <string name="activity_follow">\"%1$s\" is now following you!</string>
    <string name="activity_like">\"%1$s\" liked your post.</string>
    <string name="add_capture_widget">Record more quickly! You can instantly jump to the Vine camera right from your home screen using the new capture widget.</string>
    <string name="add_capture_widget_title">Fast Capture Widget</string>
    <string name="add_to_channel">Add to a channel</string>
    <string name="add_widget">Add Widget</string>
    <string name="almost_done">"Sending post to Vine's servers"</string>
    <string name="amazon_bucket">vines</string>
    <string name="amazon_bucket_dev" />
    <string name="amazon_s3">https://s3.amazonaws.com</string>
    <string name="app_name">Vine</string>
    <string name="app_secret" />
    <string name="attribution_url">https://vine.co/android-attribution</string>
    <string name="auth_client_availability_notification_title">Install/Update/Enable Google Play services</string>
    <string name="auth_client_play_services_err_notification_msg">Google Play services error</string>
    <string name="auth_client_requested_by_msg">Requested by %1$s</string>
    <string name="authenticator_activity_title">Sign in</string>
    <string name="block_person">Block person</string>
    <string name="camera_failed_to_open">Camera cannot be accessed because it is being used by another application right now. Restart the app or your phone may resolve this issue.</string>
    <string name="camera_photo_error">An error occurred while trying to use that photo. Please check that your SD card is properly mounted.</string>
    <string name="camera_widget_name">Capture</string>
    <string name="cancel">Cancel</string>
    <string name="caption_length_exceeded">Caption must be 120 characters or less.</string>
    <string name="capture">Capture</string>
    <string name="choose_photo">Choose existing</string>
    <string name="com.crashlytics.android.build_id">096a3331-d708-4177-b07d-7940ce3c7222</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_requesterror_password_changed">Your Facebook password has changed. Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_permissions">This app doesn’t have permission to do this. To change permissions, try logging into the app again.</string>
    <string name="com_facebook_requesterror_reconnect">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_relogin">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_web_login">Your Facebook account is locked. Please log into www.facebook.com to continue.</string>
    <string name="comment_length_exceeded">Comments must be 140 characters or less.</string>
    <string name="comments_empty">Nobody has said anything yet.</string>
    <string name="comments_hint">Say something nice</string>
    <string name="comments_posting">Sending comment</string>
    <string name="comments_title">Comments</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="content_control_posts_explicit">Posts are sensitive</string>
    <string name="content_controls_title">Your content</string>
    <string name="find_friends">Find people</string>
    <string name="logout">Logout</string>
    <string name="password_reset_title">Reset Password</string>
    <string name="settings_account">ACCOUNT</string>
    <string name="settings_attribution">Attribution</string>
    <string name="settings_deactivate_account">Deactivate account</string>
    <string name="settings_edition">Region</string>
    <string name="settings_email">Email</string>
    <string name="settings_friends">FRIENDS</string>
    <string name="settings_invite_via_email">Invite via email</string>
    <string name="settings_invite_via_text">Invite via text</string>
    <string name="settings_notifications">Notification settings</string>
    <string name="settings_phone">Phone</string>
    <string name="settings_pp">Privacy policy</string>
    <string name="settings_social_networks">SOCIAL NETWORKS</string>
    <string name="settings_support_caps">SUPPORT</string>
    <string name="settings_tos">Terms of service</string>
    <string name="signup_name_hint">Your full name</string>
    <string name="signup_phone">Phone</string>
    <string name="signup_phone_hint">optional</string>
    <string name="vine_caps">VINE</string>
</resources>