<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:background="@color/settings_bg" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/layout_root" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <RelativeLayout android:gravity="top" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <View android:id="@id/profile_background" android:layout_width="fill_parent" android:layout_height="fill_parent" />
            <FrameLayout android:gravity="center" android:orientation="vertical" android:id="@id/user_image_container" android:paddingTop="28.0dip" android:paddingBottom="19.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <ImageView android:layout_gravity="center" android:id="@id/user_image" android:padding="1.0dip" android:layout_width="@dimen/user_image_settings" android:layout_height="@dimen/user_image_settings" android:layout_margin="2.0dip" android:scaleType="centerCrop" />
                <ImageView android:layout_gravity="center" android:id="@id/user_image_frame" android:background="@drawable/frame_avatar" android:padding="0.0dip" android:layout_width="@dimen/user_image_settings" android:layout_height="@dimen/user_image_settings" android:layout_margin="2.0dip" android:scaleX="1.01" android:scaleY="1.01" />
            </FrameLayout>
        </RelativeLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <EditText android:textSize="@dimen/font_size_xxxlarge" android:textStyle="bold" android:gravity="center" android:id="@id/name" android:layout_height="48.0dip" android:layout_marginLeft="@dimen/spacing_small" android:layout_marginRight="@dimen/spacing_small" android:hint="@string/signup_name_hint" android:inputType="textCapWords|textNoSuggestions" style="@style/SettingsEditText" />
            <include layout="@layout/settings_divider" />
            <EditText android:textSize="@dimen/font_size_xlarge" android:gravity="top|center" android:id="@id/description" android:paddingTop="@dimen/spacing_small" android:paddingBottom="@dimen/spacing_small" android:layout_height="wrap_content" android:scrollHorizontally="false" android:inputType="textCapSentences|textMultiLine" style="@style/SettingsEditText" />
            <include layout="@layout/settings_divider" />
            <EditText android:textSize="@dimen/font_size_xlarge" android:gravity="center" android:id="@id/location" android:layout_height="@dimen/settings_row_height" android:inputType="textCapSentences" style="@style/SettingsEditText" />
            <include layout="@layout/settings_divider" />
            <co.vine.android.widget.TypefacesTextView android:text="@string/settings_account" style="@style/SettingsHeader" />
            <RelativeLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/spacing_small" android:layout_marginRight="@dimen/spacing_small">
                <co.vine.android.widget.TypefacesTextView android:text="@string/settings_email" style="@style/SettingsLabel" />
                <EditText android:id="@id/email" style="@style/SettingsValue" />
            </RelativeLayout>
            <include layout="@layout/settings_divider" />
            <RelativeLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/spacing_small" android:layout_marginRight="@dimen/spacing_small">
                <co.vine.android.widget.TypefacesTextView android:text="@string/settings_phone" style="@style/SettingsLabel" />
                <EditText android:id="@id/phone" style="@style/SettingsValue" />
            </RelativeLayout>
            <include layout="@layout/settings_divider" />
            <LinearLayout android:id="@id/password" style="@style/SettingsItemParent">
                <co.vine.android.widget.TypefacesTextView android:text="@string/password_reset_title" style="@style/SettingsLabel.Selectable" />
            </LinearLayout>
            <include layout="@layout/settings_divider" />
            <LinearLayout android:id="@id/content_controls" style="@style/SettingsItemParent">
                <co.vine.android.widget.TypefacesTextView android:text="@string/content_controls_title" style="@style/SettingsLabel.Selectable" />
            </LinearLayout>
            <include layout="@layout/settings_divider" />
            <FrameLayout android:id="@id/notification_settings" style="@style/SettingsItemParent">
                <ImageView android:layout_gravity="right|center" android:id="@id/alert_icon" android:layout_width="32.0dip" android:layout_height="32.0dip" android:src="@drawable/ic_settings_alert" />
                <co.vine.android.widget.TypefacesTextView android:text="@string/settings_notifications" style="@style/SettingsLabel.Selectable" />
            </FrameLayout>
            <include layout="@layout/settings_divider" />
            <RelativeLayout android:orientation="horizontal" android:id="@id/edition_container" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/spacing_small" android:layout_marginRight="@dimen/spacing_small">
                <co.vine.android.widget.TypefacesTextView android:id="@id/edition_label" android:text="@string/settings_edition" style="@style/SettingsLabel" />
                <Spinner android:id="@id/edition" android:background="@*android:color/transparent" android:layout_width="wrap_content" android:layout_height="@dimen/settings_row_height" android:layout_toRightOf="@id/edition_label" android:layout_alignParentRight="true" />
            </RelativeLayout>
            <include layout="@layout/settings_divider" />
            <co.vine.android.widget.TypefacesTextView android:text="@string/settings_friends" style="@style/SettingsHeader" />
            <LinearLayout android:id="@id/find_friends" style="@style/SettingsItemParent">
                <co.vine.android.widget.TypefacesTextView android:text="@string/find_friends" style="@style/SettingsLabel.Selectable" />
            </LinearLayout>
            <include layout="@layout/settings_divider" />
            <LinearLayout android:id="@id/invite_via_text" style="@style/SettingsItemParent">
                <co.vine.android.widget.TypefacesTextView android:text="@string/settings_invite_via_text" style="@style/SettingsLabel.Selectable" />
            </LinearLayout>
            <include layout="@layout/settings_divider" />
            <LinearLayout android:id="@id/invite_via_email" style="@style/SettingsItemParent">
                <co.vine.android.widget.TypefacesTextView android:text="@string/settings_invite_via_email" style="@style/SettingsLabel.Selectable" />
            </LinearLayout>
            <include layout="@layout/settings_divider" />
            <co.vine.android.widget.TypefacesTextView android:text="@string/settings_social_networks" style="@style/SettingsHeader" />
            <LinearLayout android:id="@id/twitter_connect" style="@style/SettingsItemParent">
                <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <co.vine.android.widget.TypefacesTextView android:id="@id/twitter_connect_label" style="@style/SettingsLabel.Selectable" />
                    <co.vine.android.widget.TypefacesTextView android:id="@id/twitter_connect_value" style="@style/SettingsValue.Light" />
                </RelativeLayout>
            </LinearLayout>
            <include layout="@layout/settings_divider" />
            <LinearLayout android:id="@id/facebook_connect" style="@style/SettingsItemParent">
                <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <co.vine.android.widget.TypefacesTextView android:id="@id/facebook_label" style="@style/SettingsLabel" />
                    <co.vine.android.widget.TypefacesTextView android:id="@id/facebook_value" style="@style/SettingsValue.Light" />
                </RelativeLayout>
            </LinearLayout>
            <include layout="@layout/settings_divider" />
            <co.vine.android.widget.TypefacesTextView android:text="@string/settings_support_caps" style="@style/SettingsHeader" />
            <LinearLayout android:id="@id/clear_cache" style="@style/SettingsItemParent">
                <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <co.vine.android.widget.TypefacesTextView android:id="@id/clear_cache_label" style="@style/SettingsLabel.Selectable" />
                    <co.vine.android.widget.TypefacesTextView android:id="@id/clear_cache_value" style="@style/SettingsValue.Light" />
                </RelativeLayout>
            </LinearLayout>
            <include layout="@layout/settings_divider" />
            <LinearLayout android:id="@id/terms_of_service" style="@style/SettingsItemParent">
                <co.vine.android.widget.TypefacesTextView android:text="@string/settings_tos" style="@style/SettingsLabel.Selectable" />
            </LinearLayout>
            <include layout="@layout/settings_divider" />
            <LinearLayout android:id="@id/privacy_policy" style="@style/SettingsItemParent">
                <co.vine.android.widget.TypefacesTextView android:text="@string/settings_pp" style="@style/SettingsLabel.Selectable" />
            </LinearLayout>
            <include layout="@layout/settings_divider" />
            <LinearLayout android:id="@id/attribution" style="@style/SettingsItemParent">
                <co.vine.android.widget.TypefacesTextView android:text="@string/settings_attribution" style="@style/SettingsLabel.Selectable" />
            </LinearLayout>
            <include layout="@layout/settings_divider" />
            <LinearLayout android:id="@id/locale" android:visibility="gone" style="@style/SettingsItemParent">
                <co.vine.android.widget.TypefacesTextView android:text="Set custom locale" style="@style/SettingsLabel.Selectable" />
            </LinearLayout>
            <include layout="@layout/settings_divider" />
            <LinearLayout android:id="@id/deactivate_account" style="@style/SettingsItemParent">
                <co.vine.android.widget.TypefacesTextView android:text="@string/settings_deactivate_account" style="@style/SettingsLabel.Selectable" />
            </LinearLayout>
            <include layout="@layout/settings_divider" />
            <LinearLayout android:gravity="center_vertical" android:id="@id/logout" android:paddingTop="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/spacing_small" android:layout_marginRight="@dimen/spacing_small">
                <co.vine.android.widget.TypefacesTextView android:textSize="@dimen/font_size_xlarge" android:textColor="@color/solid_white" android:gravity="center" android:background="@drawable/logout_btn" android:layout_width="fill_parent" android:layout_height="@dimen/tabbar_height" android:text="@string/logout" style="@style/BoldText" />
            </LinearLayout>
            <LinearLayout android:gravity="center_vertical" android:id="@id/version" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/standard_spacing" android:minHeight="@dimen/spacing_large">
                <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/standard_spacing" android:layout_marginTop="@dimen/spacing_small" android:layout_marginBottom="@dimen/spacing_small">
                    <co.vine.android.widget.TypefacesTextView android:textSize="@dimen/font_size_medium" android:textColor="@color/sign_in_text_hint" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/vine_caps" />
                    <ImageView android:id="@*android:id/icon" android:background="@drawable/roundel" android:layout_width="@dimen/settings_vine_icon" android:layout_height="@dimen/settings_vine_icon" android:layout_marginLeft="@dimen/standard_spacing" android:layout_marginRight="@dimen/standard_spacing" android:scaleType="centerCrop" />
                    <co.vine.android.widget.TypefacesTextView android:textSize="@dimen/font_size_medium" android:textColor="@color/sign_in_text_hint" android:id="@id/version_number" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>